fix some spacing issues

--- a/static/css/txt.css
+++ b/static/css/txt.css
@@ -9,6 +9,7 @@ html {
 body {
 	font-family: monospace;
 	counter-reset: h2;
+	margin: auto;
 }
 
 body * {
@@ -24,6 +25,10 @@ a:visited {
 	color: var(--secondary-color);
 }
 
+main {
+	margin-top: 10px;
+}
+
 .article-list {
 	margin: 0 3rem;
 	padding: 0;
@@ -32,6 +37,7 @@ a:visited {
 .article-list li {
 	list-style: none;
 	display: flex;
+	margin-top: 10px;
 	align-items: center;
 }
 
@@ -92,8 +98,9 @@ h6.nocount:before {
 }
 
 header {
-	margin: 1rem 0;
+	margin: 2rem 0 0;
 	text-align: center;
+	padding-bottom: 1rem;
 }
 
 header * {
